json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,78 @@
 {
  "items": [
   {
+    "id": "I9zMGC6fTbuYP5xyco-0aA",
+    "url": "https://remote.co/job/virtual-scheduler-3/",
+    "title": "Virtual Scheduler",
+    "tags": [
+      "DBG:surround``OR(eastern, east, est, edt, newyork) 3W OR(time,timezon)",
+      "DBG:surround``avail 8W 2N( OR(core,busi), hour)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/America/East"
+    ],
+    "tagsNames1": [
+      "US East time zone",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 26, 2018 4:56:55 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Virtual Scheduler at <span>Milrich Virtual Professionals</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span> | <span> Part-time </span></div><div>            <p><strong>Position Type:</strong> Independent Contractor</p><ul><li>Availability Needed: At least a possible 4-hour block Monday through Friday between the hours of 9am-5pm</li><li>Number of Hours per week: 5-40</li><li>Minimum availability of 20-30 hours each week during normal business hours is preferred</li><li>Compensation: starts at $10/hr</li></ul><p>Milrich Virtual Professionals, LLC is currently looking for Virtual Schedulers. Schedulers will be making calls on behalf of financial and insurance wholesalers to set up appointments for them with advisors. These may be cold calls and would require the scheduler to successfully navigate through a possible gatekeeper via phone and email to reach the financial advisor or the individual who handles the advisor’s calendar.</p><p>Your work week will be Monday through Friday, with work hours being between 9am-5pm.&nbsp;<em>You especially need to be available during normal business hours in the morning to qualify for this position based on your geographic location.</em>&nbsp;<em>Some consideration may be given to Eastern Time Zone with morning and early afternoon availability.</em></p><p><strong>Responsibilities:</strong></p><ul><li>Schedule appointments via phone and email for wholesalers to meet with advisors</li><li>Respond to emails/calls within one hour during 9am-5pm (most cases can be done from a smartphone)</li><li>Participate in team conference calls every other week on Thursdays at 11am PT</li></ul><p><strong>Desired skills:</strong></p><ul><li>Able to navigate between email, call log, call list, online phone system, online mapping system and wholesaler’s calendar without getting flustered</li><li>Attention to detail</li><li>Proficient in Google docs, knowledge of Excel, Word, and Outlook extremely helpful</li><li>Sales experience a plus</li></ul><p><strong>Requirements</strong></p><ul><li>Very comfortable making cold calls</li><li>Not easily rejected</li><li>Able to work independently and in a partnership with a wholesaler</li><li>Able to pass background check</li><li>Cheerful phone disposition</li><li>Able to talk on phone for 1-4 hours at a time with no interruptions (children, animals, etc.)</li><li>Good internet connection</li><li>Good phone connection (may use cell phone)</li><li>Computer skills: Able to troubleshoot when systems are not working properly, know how to open an Excel spreadsheet and copy the information into another program</li></ul><p>Please apply directly to ashton@wmmschedulers.com</p>        </div><div>        <a href='mailto:ashton@wmmschedulers.com?subject=Application%20via%20%22Virtual%20Scheduler%22%20listing%20on%20https%3A%2F%2Fremote.co' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
+    "id": "9gAnl9OESquKZBoxFPrAnw",
+    "url": "https://remote.co/job/online-english-teacher-4/",
+    "title": "Online English Teacher",
+    "tags": [
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 25, 2018 8:00:20 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Online English Teacher at <span>Qkids</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span> | <span> Part-time </span></div><div>            <h4><strong>Position Details</strong><strong>&nbsp;</strong></h4><p><strong>Position title</strong>: Online English Teacher<br><strong>Rate</strong>: $16-20 USD/hr (2 lessons)<br><strong>Location</strong>: Remote, online (U.S. and Canada)<br><strong>Start date</strong>: Immediately<br><strong>Contract type</strong>: Independent Contractor<br><strong>Contract term</strong>: Flexible</p><h4><strong>Your Work&nbsp;</strong></h4><ul><li>Teach English to young learners between 5-12 years of age through our online platform</li><li>Our Class Coordination Team will handle scheduling and student assignment</li><li>Teachers will be teaching classrooms with up to 4 students</li><li>The curriculum is preset, no lesson planning required</li><li>Each in-lesson time is 30 minutes</li><li>Training and support provided</li></ul><h4><strong>Requirements</strong><strong>&nbsp;</strong></h4><ul><li>Eligible to legally work in the U.S. or Canada</li><li>Earned a Bachelor’s degree or currently enrolled in a university program</li><li>Digital literacy and the ability to lead an engaging learning atmosphere</li><li>Prior teaching experience or equivalent in education, tutoring, mentoring, homeschooling preferred</li><li>English teaching certificates (TESOL, TEFL, CELTA, ESL) preferred</li><li>Technical requirements: a computer with stable internet connection and clear audio/video capacity</li><li>The minimum time commitment is 6 hours weekly</li></ul><h4><strong>Regular class time slots: 19 hrs</strong></h4><p>7 days a week (AM – EST):<br>6:40-7:10, 7:20-7:50, 8:00-8:30, 8:40-9:10<br>Plus Friday and Saturday (PM – EST):<br>8:40-9:10, 9:20-9:50, 10:00-10:30, 10:40-11:10, 11:20-11:50</p><h4><strong>Additional summer time slots (June 24th – August 30th EST): 12.5 hrs</strong></h4><p>Sunday – Thursday (PM-EST):<br>8:40-9:10, 9:20-9:50, 10:00-10:30, 10:40-11:10, 11:20-11:50</p><p><strong>*Payment: </strong>the base rate for our teachers is $16 USD per hour, equivalent to 2 lessons. There are attendance and performance bonuses, $1USD each, calculated weekly. With full bonuses, the pay is $20 USD per hour.<strong>&nbsp;</strong></p><h4><strong>About Qkids&nbsp;</strong></h4><p>Qkids is an interactive online teaching platform that connects English teachers to young language learners in real time with fun, user-friendly software. Founded in 2015, we are now a national leader in cross-cultural E-learning with over 100,000 Chinese elementary and secondary students. Connected on our patented and effective game-based learning platform, English teachers from the United States and Canada guide students through a curriculum of fun, dynamic, and engaging narrative gaming adventures from the comfort of their own homes. We are ready to build lasting growth for both learners and teachers, and we pride ourselves on providing the authentic North American classroom experience for our students in China. https://www.facebook.com/JoinQkids/<em>&nbsp;</em></p><p><em>This opportunity: Contract, Part-time, Work from home, remote, Online, Work online, Tutor, English Teacher, Students, stay at home, qkids, teach online</em></p>        </div><div>        <a href='http://teacher.qkids.net/remoteco' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
     "id": "C4J7Nr2wRL2mL9_FLIQMiw",
     "url": "http://jobmote.com/jobs/18924-sage-x3-consultant-remote-working",
     "title": "Sage X3 Consultant - Remote Working",
@@ -5724,50 +5796,6 @@
     "published": "May 31, 2018 6:36:20 PM",
     "validThrough": "Jan 1, 1970 3:00:00 AM",
     "content": "JOB TYPE: Full time<br /><br />LOCATION: <br />Bucharest, Romania<br /> (Partial remote)<br /><br />Anywhere in<br />Bucharest<br /><br /><br />EXPERIENCE: intermediate<br /><br />COMPANY: Sparkware Technologies Romania; 0-25 employees; 0-25% remote;<br /><br />Company description:<br /><br />Sparkware Technologies, an 888 company (corporate.888.com), is a software R&D center operating in Romania since 2013 as part of a multinational listed group, developing products and solutions in the online entertainment domain. <br />Sparkware Technologies provides an end-to-end offering including: an online platform infrastructure, back-end application servers, back office and CRM tools, payment processing systems and multiple SW clients working with technologies like: HTML, Javascript, C++, .NET, C#(for Automation), Q.A, SLS, SQL,DBA, DEVops, B.I.<br />888 Holdings Public Limited Company (888) is one of the world's most popular online gaming entertainment companies. 888 develops and manages principal aspects of its operations in-house, including software development, marketing, business development, back-office payment processing, risk management, and member relationship management.<br />We are a dynamic, creative and quality oriented company providing our employees with a challenging and rewarding experience with plenty of opportunities for both internal and external training and a culture that encourages experiencing a wide range of technologies and the possibility of working on different aspects within our extensive solutions range.<br />We are looking for passionate and dedicated professionals who can make the difference and having fun doing it!<br /><br />                                 Join us and ...  <Ignite YOUR Spark !>"
-  },
-  {
-    "id": "BCuTWMxhQNOXSPJlxBnOow",
-    "url": "https://angel.co/spiceblue/jobs/72948-growth-hacking-freshers-experienced",
-    "title": "Growth Hacking Freshers/Experienced",
-    "tags": [
-      "Chennai",
-      "DBG:surround``fulltim 4N remot",
-      "DBG_TECH1:k/t/w:go/go/3",
-      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=3, nodejs=0, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
-      "Full Time",
-      "Good communication skills",
-      "Growth Hacker",
-      "Marketing",
-      "Marketing Research",
-      "REMOTE1/100",
-      "Remote OK",
-      "Sales and Marketing",
-      "TECH1/go",
-      "TITLE1/unknown",
-      "TZ/unknown"
-    ],
-    "tagsNames1": [
-      "undefined job title"
-    ],
-    "tagsNames2": [
-      "go"
-    ],
-    "hiringOrganization": {
-      "name": "UNSET",
-      "sameAs": "UNSET"
-    },
-    "salary": {
-      "currency": "USD",
-      "minValue": 0,
-      "maxValue": 0,
-      "info": "",
-      "unit": "UNSET",
-      "isEquity": false
-    },
-    "employmentType": "UNSET",
-    "published": "May 26, 2018 10:24:55 AM",
-    "validThrough": "Jan 1, 1970 3:00:00 AM",
-    "content": "<div><h2>Growth Hacking Freshers/Experienced at Spiceblue</h2><div>Chennai, Remote · Full Time</div></div><div><div>Skills</div><div>Sales and Marketing, Marketing Research, Good communication skills</div><div>Compensation</div><div>₹120K–₹300K<br>No Equity</div></div><h3>Job Description</h3><div><p>What are we looking for? Well, you are part marketer and part hacker, but you are obsessed with growing our customer base.</p><p>In this cross-functional role, you’ll be able to learn a lot, and will have exposure to all levels of the organization.<br>We are hoping you can help us go on the offensive and make a much larger dent in the universe. Take a look at : <a href='http://www.spiceblue.com' rel='nofollow'>www.spiceblue.com</a> , and if you feel this venture thrills you, get in touch with us.</p><p>Required Skills:</p><p>#Must have the passion to self-motivate, the guile to sell your ideas to other stakeholders, and the drive to execute those ideas cross-functionally<br>#Ability to operate at an extremely fast pace environment.</p></div>"
   }
 ]
 }
