json files, md files

--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,193 @@
 {
  "items": [
   {
+    "id": "J8gpao9qR4y-9ajVmNDK4w",
+    "url": "https://remote.co/job/special-counsel-eeo/",
+    "title": "Special Counsel, EEO",
+    "tags": [
+      "DBG:surround``3N( OR(feasibl,OR(consid,consider),option,occas,opportun,possibl,abil), OR(3N(remot, work),telecommut,2N(work,home)) ) NOT OR(regularli, abracadabra)",
+      "DBG:surround``3N(locat,remot)",
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "REMOTE1/50",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "50% remote",
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 27, 2018 5:49:49 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Special Counsel, EEO at <span>Ogletree Deakins</span></h2><div><span><i></i> Remote</span>         | <span> Part-time </span></div><div>            <p><strong>Location:&nbsp;</strong>Indianapolis</p><p><strong>Position:</strong> Counsel</p><p><strong>Seniority Level:</strong> Mid-Senior level</p><p><strong>Overview:</strong></p><p>Ogletree Deakins is one of the largest labor and employment law firms representing management in all types of employment-related legal matters. The firm has approximately 850 lawyers located in 53 offices across the United States, Canada, Europe and Mexico. Ogletree Deakins has been named a Law Firm of the Year for seven consecutive years by&nbsp;<em>U.S. News Best Lawyers</em>&nbsp;Best Law Firms. In 2018, the publication named Ogletree Deakins its Law Firm of the Year in the Litigation – Labor &amp; Employment category. In addition to handling labor and employment law matters, the firm has thriving practices focused on business immigration, employee benefits, and workplace safety and health law. Ogletree Deakins represents a diverse range of clients, from small businesses to Fortune 50 companies.</p><p>We have a unique opportunity for an experienced employment defense attorney to join our EEO Advantage Administrative Charges team as a Special Counsel attorney. The Special Counsel attorney will focus on handling administrative charges before federal, state and local agencies, including investigation, assessment and development of risk strategies, client interaction and preparation of persuasive position statements.</p><p>The Special Counsel attorney will have&nbsp;<strong>a flexible part-time schedule with the ability to work from home.</strong>&nbsp;Candidates who apply should have extensive experience in preparing position statements in connection with large law firm or in-house practice.&nbsp;<strong><em>This position will primarily support our Indianapolis office but may be based out of any location.</em></strong></p><p>We are fully committed to the importance of diversity within the legal profession, as well as all workplace environments and strongly encourage the interest of diverse candidates in the firm.</p><p><strong>Requirements:</strong></p><ul><li>Juris Doctor. Qualified candidates must be and remain licensed to practice law and in good standing in the state of employment. During employment, must meet requirements for continuing licensure for law practice.</li><li>8+ years of recent experience preparing position statements required, either in-house or at a large law firm.</li><li>Significant management-side labor &amp; employment experience required.</li><li>Superior analytical and writing skills required.</li></ul><p>Please note, a writing sample is required to be considered for the Special Counsel role (a redacted position statement writing sample is preferred).</p>        </div><div>        <a href='https://ogletree.com/careers/special-counsel---location-flexible' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
+    "id": "SfDRxmB6QJCfe70JaTbWSA",
+    "url": "https://remote.co/job/online-tutor-4/",
+    "title": "Online Tutor",
+    "tags": [
+      "DBG:surround``from 4W your 2W home",
+      "DBG_TECH1:k/t/w:c++/c/8",
+      "DBG_TECH1:k/t/w:java/java/2",
+      "DBG_TECH1:k/t/w:java/mobile/1",
+      "DBG_TECH1:k/t/w:javascript/frontend/1",
+      "DBG_TECH1:k/t/w:javascript/nodejs/1",
+      "DBG_TECH1:k/t/w:perl/other/5",
+      "DBG_TECH1:k/t/w:php/php/5",
+      "DBG_TECH1:techWeightMap:{python=0, other=5, dotnet=0, c=8, mobile=1, go=0, nodejs=1, bigdata-ml=0, ruby=0, apple=0, java=2, gamedev=0, php=5, embedded=0, frontend=1}",
+      "REMOTE1/100",
+      "TECH1/c",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "c"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 27, 2018 5:40:13 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Online Tutor at <span>Brainfuse</span></h2><div><span><i></i> Remote</span>         | <span> Freelance </span></div><div>            <p><strong>Who We Are</strong></p><p>Brainfuse (www.brainfuse.com) is a nationally recognized eLearning corporation. Founded in 1999, Brainfuse is one of the nation’s leading online education providers, serving a diverse client base of libraries, school districts, workforce centers, and universities.</p><p><strong>Who We Are Looking For</strong></p><p>Brainfuse is hiring tutors in all subjects. Since this is an online tutoring position, applicants will need to have their own computers and a stable Internet connection.</p><p>We are especially looking for Physics, Chem, Stats, Oracle SQL and Earth Science tutors!</p><p><strong>Subjects that we are hiring for:</strong></p><ul><li>Science: Biology, Microbiology, Chemistry, Organic Chemistry, Physics, Earth, and more.</li><li>Math: Algebra, Geometry, Trigonometry, Precalculus, Calculus, Statistics, and more.</li><li>Business: Accounting, Economics, and Finance.</li><li>Computer: Java, JavaScript, Cloud Computing, PHP/MySQL, PERL/CGI, Advanced Visual Basic, C++, HTML, Information Technology, A+, Security +, CCNA, CCNA Security, Linux+, Excel, PowerPoint, and Access.</li></ul><p><strong>How It Works</strong></p><p><strong>You can work from your own home or anywhere with an internet connection</strong>. Live tutoring is done through a virtual whiteboard and chat box so no webcam or mic is required. For more information on how it works, please visit www.brainfuse.com.</p><p>Scheduling is flexible, and you choose your own hours. There are also opportunities for advancement. *If interested, please reply to this ad with your resume attached and mention which subjects you are applying for.</p>        </div><div>        <a href='mailto:lbarbieri@brainfuse.com?subject=Application%20via%20%22Online%20Tutor%22%20listing%20on%20https%3A%2F%2Fremote.co' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
+    "id": "hUYfe4nWSKGCLlhFr7UKHQ",
+    "url": "https://remote.co/job/assessor/",
+    "title": "Assessor",
+    "tags": [
+      "DBG:surround``OR(locat, anywher, base, resid) 7W usa",
+      "DBG:surround``work 2W from 2W home 4W OR(staff,cowork,offic,posit)",
+      "DBG_TECH1:k/t/w:computer-vision/bigdata-ml/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=0, bigdata-ml=8, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/bigdata-ml",
+      "TITLE1/unknown",
+      "TZ/America"
+    ],
+    "tagsNames1": [
+      "American time zones",
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "bigdata-ml"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 27, 2018 4:56:40 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Assessor at <span>BTS</span></h2><div><span><i></i> Remote</span>         | <span> Part-time </span></div><div>            <p><strong>Job Description</strong></p><p>We are always looking for assessors to join our expanding team. As projects arise, we will contact candidates with the appropriate qualifications.</p><p>Individuals will be responsible for conducting phone and web-based role play exercises, providing competency based behavioral benchmark scoring for each exercise, and evaluating each participant’s performance. They will also be responsible for delivering feedback to a representative of the hiring organization immediately following the assessment.</p><p><strong>This is a virtual role, so qualified candidates may work from any location.</strong></p><p><strong>Required Skills</strong></p><ul><li>A Master’s Degree in Industrial/Organizational Psychology, or related field, is required. I/O Psych&nbsp;PhD&nbsp;students who do not possess an I/O Psych Master’s will also be considered.</li><li>You must be available for two full days per week (Monday-Friday; no weekends) during extended business hours to commit to this long term project. More than two days per week of availability is preferred.</li><li>Previous experience as an assessor, coach, role player, with business simulations, or other individual or group behavioral assessments, is highly desirable</li><li>Please include a cover letter with a description of relevant experience, alongside your resume/CV</li><li>All candidates must be eligible to work in the United States permanently without sponsorship</li></ul><p><strong>Job Location:&nbsp;</strong>Work From Home,&nbsp;United States</p><p><strong>Position Type:</strong>&nbsp;Part-Time</p>        </div><div>        <a href='https://bts-openhire.silkroad.com/epostings/index.cfm?fuseaction=app.dspjob&amp;jobid=14&amp;company_id=17274&amp;version=1' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
+    "id": "8R488hiYQpuPNjfr8bf0SA",
+    "url": "https://remote.co/job/hospital-coder-2/",
+    "title": "Hospital Coder",
+    "tags": [
+      "DBG:surround``work 2W from 2W home 4W OR(staff,cowork,offic,posit)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 27, 2018 4:47:14 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Hospital Coder at <span>Seattle Children's</span></h2><div><span><i></i> Remote</span>        </div><div>            <p><strong>Job ID</strong> 2018-26347</p><p><strong>Area of Interest:</strong> Medical Records</p><p><strong>Location Name:</strong> Other Off-Site Location</p><p><strong>FTE/Hours per pay period:</strong> 1.0 FTE&nbsp;(80 hours per bi-weekly pay periods)</p><p><strong>Work Status:</strong> Regular</p><p><strong>Department:</strong> Revenue Integrity &amp; Coding</p><p><strong>Shift:</strong> Day Shift</p><p><strong>Overview</strong></p><p><strong>What you will do:</strong>&nbsp;Under general supervision, the Hospital Coder Advanced is responsible for the collection of relevant, pertinent, accurate and timely diagnosis and/or procedural codes abstracted from all hospital case types including complex medical/surgical inpatient cases (such as neonates, pediatric cardiac surgery, pediatric cycle accounts, etc.) or other advanced types of services including surgical, observation, outpatient in a bed, and specialty procedures. This includes effective use of hospital encoding systems and resources as well as recognizing what data can be abstracted, presented and interpreted for effective use throughout the hospital data cycle. Performs other duties as assigned, which may include training others.</p><p><em><strong>Due to given business needs candidate hired will telecommute, work from home.</strong></em></p><p><strong>Position/Employer Highlights</strong></p><ul><li>Flexible work schedule/hours-ability to work on weekends pick up shift differential</li><li>Comprehensive Benefits Package. We pay 100% of the premiums for dependent children, up to their 26th birthday</li></ul><p><strong>Requirements</strong></p><p><strong>Required Education/Experience:</strong></p><ul><li>Associates Degree or two years’ college coursework in Health Information Management or equivalent.</li><li>Minimum of 5 years hospital based coding experience.</li><li>Minimum of 2 years hospital based coding experience at Seattle Childrens Hospital for internal applicants.</li></ul><p><strong>Required Credentials:</strong></p><ul><li>One of the following credentials is required: AHIMA – Certified Coding Specialist (CCS), AHIMA – Certified Coding Specialist- Physician (CCS-P), AAPC- Certified Outpatient Coder (COC), AAPC- Certified Professional Coder (CPC).</li></ul><p><strong>Preferred:</strong></p><ul><li>RHIT or RHIA Certified thru AHIMA.</li></ul>        </div><div>        <a href='https://careers-seattlechildrens.icims.com/jobs/26347/hospital-coder---advanced/job' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
+    "id": "zJc13PaSSz6LAwQBwmCHBg",
+    "url": "https://www.remoteage.com/remote-jobs/svp-finance-crossover/",
+    "title": "SVP of Finance",
+    "tags": [
+      "DBG:surround``2W( OR(100,fulli,entir), remot)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "REMOTE1/100",
+      "TECH1/unknown",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "unknown"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 27, 2018 1:40:35 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2> SVP of Finance</h2><div>Worldwide</div><div>Company: Crossover<p></p></div><div>FULL-TIME</div><div><h3>Overview</h3><p>We’re running an Exclusive Hiring Event on this coming Saturday to hire&nbsp;<strong>Senior Vice Presidents of Finance&nbsp;($400K/yr).</strong></p><p>This event will include all testing for the role. Upon grading the deliverables from the event, we will set up qualified candidates with an interview with the hiring manager. This is a 100% remote, full-time role.</p><p><strong>Do you have what it takes to be a successful SVP Finance in a fast-paced cloud-based network environment where you will manage a world-class team of 100+ finance professionals? This senior role requires critical thinking, inspirational leadership, and excellent communication skills.</strong></p><h2><strong>Candidate Requirements:</strong></h2><ul><li>15 years of US GAAP experience in a senior finance management position of a company with international operations.</li><li>3+ years experience of proficiently managing teams exceeding 100 finance professionals.</li><li>Previous responsibility for $500 million-1 billion (annualized) turnover in a software company.</li><li>A successful track record as the CFO for a software company or SVP for a software division.</li><li>Experience managing a complex group audit – Big 4 or client side.</li><li>Extensive US GAAP exposure, ASC 606 implementation experience a bonus M&amp;A accounting and finance experience, including complex multi-currency consolidations</li><li>Extensive experience with large-scale ERP systems – Netsuite and/or Intacct a bonus</li><li>Proven team leader with the ability to work to tight deadlines in a faced-paced environment.</li><li>English language proficiency</li></ul><p>We recommend that you attend the event instead of applying online, as our Saturday event process will be much faster.</p><p>Register <strong>HERE:&nbsp;<a href='https://www.eventbrite.com/e/svp-of-finance-400kyr-exclusive-hiring-event-registration-48422260284?aff=funRomRemoteAge' rel='nofollow'>https://www.eventbrite.com/e/svp-of-finance-400kyr-exclusive-hiring-event-registration-48422260284?aff=funRomRemoteAge</a></strong></p><div> <a href='https://www.eventbrite.com/e/svp-of-finance-400kyr-exclusive-hiring-event-registration-48422260284?aff=funRomRemoteAge' rel='nofollow'>Apply for job</a></div></div>"
+  },
+  {
     "id": "I9zMGC6fTbuYP5xyco-0aA",
     "url": "https://remote.co/job/virtual-scheduler-3/",
     "title": "Virtual Scheduler",
