--- a/assets/data/TITLE1_unknown.json
+++ b/assets/data/TITLE1_unknown.json
@@ -1,6 +1,49 @@
 {
  "items": [
   {
+    "id": "FfIGFUofQpujBhhZ7d00mg",
+    "url": "https://whereverjobs.com/listing/3662/frontend-developer-build-the-smartest-way-to-buy-a-car-full-time",
+    "title": "Frontend Developer - Build the smartest way to buy a car (full time)",
+    "tags": [
+      "DBG:surround``2N(remot, posit)",
+      "DBG:surround``posit 5W 2N(from,anywher)",
+      "DBG_TECH1:k/t/w:css/frontend/3",
+      "DBG_TECH1:k/t/w:django/python/24",
+      "DBG_TECH1:k/t/w:frontend-developer/frontend/26",
+      "DBG_TECH1:k/t/w:javascript/frontend/3",
+      "DBG_TECH1:k/t/w:javascript/nodejs/3",
+      "DBG_TECH1:k/t/w:python/python/2",
+      "DBG_TECH1:k/t/w:twitter-bootstrap/frontend/8",
+      "DBG_TECH1:techWeightMap:{python=26, other=0, dotnet=0, c=0, mobile=0, go=0, nodejs=3, bigdata-ml=0, ruby=0, apple=0, java=0, gamedev=0, php=0, embedded=0, frontend=40}",
+      "REMOTE1/100",
+      "TECH1/frontend",
+      "TITLE1/unknown",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [
+      "undefined job title"
+    ],
+    "tagsNames2": [
+      "frontend"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 28, 2018 4:02:07 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h3>Frontend Developer - Build the smartest way to buy a car (full time)</h3><div>Company: Unhaggle Inc.<br><br></div><div>                                <div>Unhaggle is currently the #1 web portal in Canada for new car buying. The data we provide powers our own tools and products, including our flagship consumer car buying service at Unhaggle.com and leading automotive portals including Yahoo Autos, MSN Autos, Autofocus, AutoGuide, Globe Drive, and others. We have also recently partnered with auto makers to launch a large eCommerce platform allowing the complete purchase of new cars online.</div><div><br></div><div>We are looking for Senior Front-end Developers with experience in web application development. This is a full-time remote position, we accept applications from anywhere in the world.</div><div><br></div><div>We use GitHub to manage tasks and code reviews as well as tools/services like Travis-CI, Docker, New Relic, Sentry, Browserstack, Stripe, Twilio, Solr and Redis.</div><div>Our dev team is regularly connected in Slack for communication. We are constantly seeking the best tools available for our development team.</div><div><br></div><div><b>You will be primarily involved in the following projects/areas:</b></div><div><br></div><div>* Our new eCommerce platform for new car buying, serving major car brands</div><div>* Our web portal unhaggle.com</div><div>* Several web products we built for Enterprise clients.</div><div>* Widgets we built for third-party integration, they run in some of the most popular auto websites in Canada.</div><div>* We take quality seriously and you should expect to be involved in well written code bases following industry standards and good software development practices.</div><div><br></div><div><b>Requirements:</b></div><div><br></div><div>* At least 3 years of Javascript professional experience.</div><div>* Strong web development experience: we expect that you know XHTML, CSS and Javascript well. Hands on experience with Javascript frameworks is a big plus</div><div>* Proficient and hands on experience with responsive web sites, including the Bootstrap library.</div><div>* You care about writing semantic well formed code and paying attention to standards and good practices.</div><div>* Experience using version control software, Git is a plus.</div><div>* Track record of delivering completed projects, preferably web-based.</div><div>* Easy-going personality. You will actively participate in design discussions and code review.</div><div>* Any previous experience with Django or Django templates is a big plus.</div><div><br></div><div><b>Bonus:</b></div><div><br></div><div>* Some experience with Linux is a big plus. You will be asked to deploy changes to our dev machines that are based in Linux (Ubuntu server).&nbsp;</div><div>* Some experience with Python and/or experience with Django would be a big plus.</div><div><br></div><div>We are helping consumers to get the best price on new cars in Canada and changing the industry along the way. Working at Unhaggle brings unique challenges, you will have the opportunity to leave a large footprint and have real impact in the product we ship every day to our customers.</div><div><br></div><div>No relocation available, we are a distributed team.</div><div><br></div>            </div><div>How to apply:<br>Please submit resume and cover letter to <a href='mailto:evandro@unhaggle.com' rel='nofollow'>evandro@unhaggle.com</a></div>"
+  },
+  {
     "id": "J8gpao9qR4y-9ajVmNDK4w",
     "url": "https://remote.co/job/special-counsel-eeo/",
     "title": "Special Counsel, EEO",
