--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,43 @@
 {
  "items": [
   {
+    "id": "3GovA2nvSAaVvexRVhkyzQ",
+    "url": "https://news.ycombinator.com/item?id=17663699",
+    "title": "Gaia GPS | Junior Software Engineer | Focus on iOS | Full-time | www.gaiagps.com",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:ios/apple/6",
+      "DBG_TECH1:k/t/w:ios/mobile/6",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=6, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=6, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 1, 2018 6:00:07 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<span>Gaia GPS | Junior Software Engineer | Focus on iOS | Full-time | www.gaiagps.com<p>Remote (So far: CA, PA, OR, SD, MT, OK, WA, WI)</p><p>Help build the future of outdoor mapping at Gaia GPS. We're looking to hire a developer who wants to work with a strong team and learn a lot. You'll join a 5-person dev team whose past experience includes Google, Facebook, Mapbox, and the founding of Gaia GPS.</p><p>This position starts with a base salary of $65K, and is our first explicitly junior hire. You'll be focused on iOS development at first.</p><p>You might be:</p><p>* a CS graduate with 0-1 years of experience</p><p>* a new-ish programmer who switched from a different profession</p><p>* an experienced developer, who hasn't been part of a strong product team</p><p>Lifestyle and Benefits</p><p>* We have the most flexible, remote work environment, which lets all of us balance family and other interests, with work.</p><p>* We offer 4 weeks of vacation, and another 12 paid holidays that can be shuffled around. We provide 2 months of paid maternity, 1 month of paid paternity, and additional unpaid leave.</p><p>* Non-salary financial benefits include bonuses based on company performance (you'll learn the formula while interviewing), health insurance, and 401K matching.</p><p>* We provide the best computers, monitors, tablets, and other home office equipment. We reimburse home internet and mobile phone bills. We comp expenses for any sort of books or other materials for learning.</p><p>* We have a retreat every 9 months, alternating with and without families (past ones include Tahoe, Zion, Rocky Mountain NP, camping, backcountry skiing, etc), to hang-out and mingle the remote team.</p><p>~~~ jobs@gaiagps.com ~~~<span>              </span></p><div>        <p>                      <u></u>                        </p></div></span>"
+  },
+  {
     "id": "cE_xljdbTW2S3mMSEzq2rw",
     "url": "https://stackoverflow.com/jobs/196012/sr-mobile-developer-react-native-oreilly-auto-parts?a=13JEvLgvojlK",
     "title": "Sr. Mobile Developer (React Native) at O'Reilly Auto Parts (Springfield, MO) ",
